--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,14 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.json:json:20210307'
+
+    //swagger-UI
     implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 
+    // 스프링 시큐리티
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // Thymeleaf (뷰 템플릿 엔진)
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 test {
